# wasi-key-value-sample

./: README.md
qr-generator-cached/: Cargo.toml
qr-generator-cached/src/: bindings.rs  lib.rs
qr-generator-cached/wit/: world.wit
website/: Cargo.toml  spin.toml
website/src/: lib.rs
wit/: qr.wit
